compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__alternative_patterns_assignment.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 200
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [x] | [_, x] -> x\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs) -> Int {
  case xs {
    [x] | [_, x] -> x
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function main(xs) {
  if (xs instanceof $Empty) {
    return 1;
  } else {
    let $ = xs.tail;
    if ($ instanceof $Empty) {
      let x = xs.head;
      return x;
    } else {
      let $1 = $.tail;
      if ($1 instanceof $Empty) {
        let x = $.head;
        return x;
      } else {
        return 1;
      }
    }
  }
}
