compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__alternative_patterns_list.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 187
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [1] | [1, 2] -> 0\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs) -> Int {
  case xs {
    [1] | [1, 2] -> 0
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function main(xs) {
  if (xs instanceof $Empty) {
    return 1;
  } else {
    let $ = xs.tail;
    if ($ instanceof $Empty) {
      let $1 = xs.head;
      if ($1 === 1) {
        return 0;
      } else {
        return 1;
      }
    } else {
      let $1 = $.tail;
      if ($1 instanceof $Empty) {
        let $2 = xs.head;
        if ($2 === 1) {
          let $3 = $.head;
          if ($3 === 2) {
            return 0;
          } else {
            return 1;
          }
        } else {
          return 1;
        }
      } else {
        return 1;
      }
    }
  }
}
