compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__bit_array_referencing_shadowed_variable.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 610
expression: "\npub fn main() {\n  let a = 1\n  let a = 2\n\n  case Nil {\n    _ if <<a>> == <<1>> -> False\n    _ if <<a>> == <<2>> -> True\n    _ -> False\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let a = 1
  let a = 2

  case Nil {
    _ if <<a>> == <<1>> -> False
    _ if <<a>> == <<2>> -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import { isEqual, toBitArray } from "../gleam.mjs";

export function main() {
  let a = 1;
  let a$1 = 2;
  let $ = undefined;
  if (isEqual(toBitArray([a$1]), toBitArray([1]))) {
    return false;
  } else if (isEqual(toBitArray([a$1]), toBitArray([2]))) {
    return true;
  } else {
    return false;
  }
}
