compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__bitarray_with_var.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 33
expression: "pub fn main() {\n  case 5 {\n    z if <<z>> == <<z>> -> Nil\n    _ -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  case 5 {
    z if <<z>> == <<z>> -> Nil
    _ -> Nil
  }
}


----- COMPILED JAVASCRIPT
import { isEqual, toBitArray } from "../gleam.mjs";

export function main() {
  let $ = 5;
  let z = $;
  if (isEqual(toBitArray([z]), toBitArray([z]))) {
    return undefined;
  } else {
    return undefined;
  }
}
