compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__constructor_function_in_guard.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 524
expression: "pub fn func(x) {\n    case [] {\n        _ if [] == [ Ok ] -> True\n        _ -> False\n    }\n}\n    "
snapshot_kind: text
---
----- SOURCE CODE
pub fn func(x) {
    case [] {
        _ if [] == [ Ok ] -> True
        _ -> False
    }
}
    

----- COMPILED JAVASCRIPT
import { Ok, toList, isEqual } from "../gleam.mjs";

export function func(x) {
  let $ = toList([]);
  if (isEqual(toList([]), toList([(var0) => { return new Ok(var0); }]))) {
    return true;
  } else {
    return false;
  }
}
